@@ -6,6 +6,7 @@ Changes in 0.12.2
     label affinity
   * rdiff changes for 0.12.0 broke negative numbers for oldVersion
   * rdiff diff'd based on label instead of branch
+  * update has flavor affinity now
 
 Changes in 0.12.1
   * repquery and query always showed dependency information
